# flexpret-ges

./: env.bash
apps/ges/: CMakeLists.txt  ges.c
apps/wb_uart_led/: wb_uart_led.c
cmake/configs/: fpga.cmake
fpga/: CMakeLists.txt
fpga/de1-soc/: CMakeLists.txt  README.md
fpga/de1-soc/fp-blinky/: CMakeLists.txt
fpga/de1-soc/fp-blinky/rtl/: Top.v
fpga/de1-soc/fp-blinky/tcl/: setup_blinky_project.tcl
fpga/de1-soc/fp-bootloader/: CMakeLists.txt
fpga/de1-soc/fp-bootloader/rtl/: Top.v
fpga/de1-soc/fp-bootloader/tcl/: setup_bootloader_project.tcl
fpga/de1-soc/fp-rfu/: CMakeLists.txt
fpga/de1-soc/fp-rfu/rtl/: Top.v
fpga/de1-soc/fp-rfu/tcl/: setup_rfu_project.tcl
fpga/de1-soc/leds/: CMakeLists.txt
fpga/de1-soc/leds/rtl/: Top.v
fpga/de1-soc/xdc/: DE1_SoC.qsf  README.md
sdk/bootloader/: loader.c
sdk/lib/include/flexpret/: uart.h
sdk/lib/src/: io.c  printf_putchar.c  uart.c
src/main/scala/Core/: Top.scala
